# georocket

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  settings.gradle
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: delete.rs  import.rs  mod.rs  search.rs  search_error.rs
core/: Cargo.toml
core/src/: import.rs  lib.rs
core/src/index/: chunk_meta.rs  h3_term_index.rs  mod.rs
core/src/index/gml/: bounding_box_indexer.rs  generic_attribute_indexer.rs  mod.rs  namespaces.rs  root_element.rs
core/src/index/tantivy/: bounding_box_query.rs  iter_scorer.rs  mod.rs  query_translator.rs  tantivy_index.rs
core/src/input/: mod.rs
core/src/input/xml/: first_level_splitter.rs  mod.rs  skip_element.rs
core/src/output/: mod.rs  xml.rs
core/src/query/: error.rs  mod.rs
core/src/storage/: mod.rs  rocksdb.rs
core/src/util/: extend_rect.rs  mod.rs  window_read.rs
georocket_rs/: Cargo.toml
georocket_rs/geo-testcontainer/: Cargo.toml
georocket_rs/geo-testcontainer/src/postgis/: mod.rs
georocket_rs/georocket/: Cargo.toml
georocket_rs/georocket-cli/: Cargo.toml
georocket_rs/georocket-cli/src/: main.rs
georocket_rs/georocket-cli/src/search/: mod.rs
georocket_rs/georocket-import/: Cargo.toml
georocket_rs/georocket-import/migrations/: V1__initial.sql
georocket_rs/georocket-import/src/: builder.rs  import_args.rs  lib.rs
georocket_rs/georocket-import/src/import_config/: mod.rs
georocket_rs/georocket-import/src/indexer/: geo_json_indexer.rs  mod.rs
georocket_rs/georocket-import/src/input/: channels.rs  geo_json_splitter.rs  mod.rs
georocket_rs/georocket-import/src/output/: channels.rs  file_store.rs
georocket_rs/georocket-import/src/output/post_gis_store/: mod.rs
georocket_rs/georocket-import/src/splitter/: buffer.rs  geo_json_splitter.rs  mod.rs
georocket_rs/georocket-import/src/store/: file_store.rs  index_map.rs
georocket_rs/georocket-import/src/types/: mod.rs
georocket_rs/georocket-import/test_files/: nested_object_in_object.json  nested_properties_feature_01.json  nested_properties_feature_03.json  properties_array_feature_01.json  simple_collection_01.json  simple_feature_02.json  simple_feature_03.json
georocket_rs/georocket-migrations/: Cargo.toml
georocket_rs/georocket-migrations/migrations/postgis/: V1__initial.sql
georocket_rs/georocket-query/: Cargo.toml
georocket_rs/georocket-query/src/: lib.rs  query.rs
georocket_rs/georocket-query/src/post_gis/: mod.rs  query_build.rs
georocket_rs/georocket-query/test_files/: simple_comparison_postgis.sql
georocket_rs/georocket-types/: Cargo.toml
georocket_rs/georocket-types/src/: lib.rs
georocket_rs/georocket/migrations/: V1__initial.sql
georocket_rs/georocket/src/: lib.rs  main.rs
georocket_rs/georocket/src/chunk/: mod.rs
georocket_rs/georocket/src/importer/: builder.rs  import_args.rs  mod.rs
georocket_rs/georocket/src/index/: mod.rs
georocket_rs/georocket/src/indexer/: geo_json_indexer.rs  mod.rs
georocket_rs/georocket/src/input/: channels.rs  geo_json_splitter.rs  mod.rs
georocket_rs/georocket/src/output/: channels.rs  file_store.rs  index_map.rs  mod.rs
georocket_rs/georocket/src/search/: mod.rs  query.rs
georocket_rs/georocket/src/types/: mod.rs
georocket_rs/georocket/test_files/: nested_object_in_array.json  nested_object_in_object_in_array.json  simple_collection_02.json
georocket_rs/indexing/: Cargo.toml
georocket_rs/indexing/src/: bounding_box.rs  lib.rs
georocket_rs/indexing/src/attributes/: mod.rs
georocket_rs/indexing/src/bounding_box/: bounding_box_builder.rs  mod.rs  wgs84_validator.rs
georocket_rs/src/: lib.rs
georocket_rs/src/index/: mod.rs
georocket_rs/src/input/: geo_json.rs  mod.rs
rust/: .gitignore  Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/cli/src/commands/: import.rs  search.rs
rust/core/: Cargo.toml  build.rs
rust/core/src/: import.rs  lib.rs
rust/core/src/index/: h3_term_index.rs  mod.rs  tantivy.rs  value.rs
rust/core/src/query/: dsl.rs  mod.rs  query.lalrpop  query.rs  unescape.rs
rust/core/src/storage/: mod.rs  rocksdb.rs
rust/core/src/util/: bounding_box.rs  mod.rs  window_read.rs
rust/geo-testcontainer/: Cargo.toml  README.md
rust/geo-testcontainer/src/postgis/: mod.rs
rust/georocket/: Cargo.toml
rust/georocket-import/: Cargo.toml
rust/georocket-import/src/: lib.rs
rust/georocket-import/src/import_config/: mod.rs
rust/georocket-import/src/indexer/: mod.rs
rust/georocket-import/src/splitter/: channels.rs  geo_json_splitter.rs  mod.rs
rust/georocket-import/src/store/: file_store.rs
rust/georocket-import/src/types/: mod.rs
rust/georocket-query/: Cargo.toml
rust/georocket-query/src/: dsl.rs  merge.rs  query.rs
rust/georocket-query/src/post_gis/: mod.rs  query_build.rs
rust/georocket-types/src/: lib.rs
rust/georocket/src/: main.rs
rust/georocket/src/commands/: import.rs
rust/georocket/src/index/: mod.rs
rust/georocket/src/input/: mod.rs
rust/georocket/src/storage/: chunk_meta.rs  mod.rs  rocksdb.rs
rust/georocket/src/util/: mod.rs  window.rs  window_read.rs
rust/import/: Cargo.toml
rust/import/src/splitter/: mod.rs
rust/import/src/store/: file_store.rs  index_map.rs
rust/import/src/types/: mod.rs
rust/import/test_files/: nested_properties_dots_in_keys.json  nested_properties_feature_02.json
rust/import/test_files/gml/: simple_envelope.xml
rust/indexing/: Cargo.toml
rust/indexing/src/: lib.rs
rust/indexing/src/attributes/: mod.rs
rust/indexing/src/bounding_box/: bounding_box_builder.rs  mod.rs  wgs84_validator.rs
rust/migrations/: Cargo.toml
rust/migrations/src/: lib.rs
rust/query/: Cargo.toml
rust/query/src/: dsl.rs  lib.rs  merge.rs  query.rs
rust/query/src/post_gis/: mod.rs  query_build.rs
rust/query/test_files/: simple_features_postgis.sql
rust/testsupport/: Cargo.toml
rust/testsupport/src/: lib.rs
rust/testsupport/src/postgis/: mod.rs
rust/types/: Cargo.toml
rust/types/src/: lib.rs
(+1182 files in other folders)
