[workspace]
resolver = "2"

members = [
    "core",
    "cli",
]

[workspace.dependencies]
anyhow = "1.0"
ariadne = "0.4.1"
assertor = "0.0.2"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.13"
geo = "0.28.0"
georocket-core = { path = "core" }
h3o = { version = "0.6.4", features = ["geo"] }
lalrpop = "0.20.2"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
mime_guess = "2.0.4"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
proj = "0.27.2"
quick-xml = "0.31.0"
rand = "0.8.5"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
rustc-hash = "2.0.0"
# tantivy = "0.22.0"
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "b806122c817f19598c85369fe5c6e6788f81139d" }
tantivy-common = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "b806122c817f19598c85369fe5c6e6788f81139d" }
tempdir = "0.3.7"
ulid = "1.1.2"
