[package]
name = "georocket"
version = "3.0.0-alpha.1"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
georocket-core.workspace = true
lalrpop-util.workspace = true
mime_guess.workspace = true
thiserror.workspace = true
yansi.workspace = true
