[package]
name = "georocket_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
thiserror = "1.0.40"
tokio = {version = "1.28.2", features = ["sync", "rt", "macros"]}
