[package]
name = "georocket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
anyhow = "1.0"
clap = {version = "4.5", features = ["derive"]}
tokio = {version = "1.36", features = ["rt"]}

# Workspace Dependencies:
georocket-import = {path = "../georocket-import"}


