[package]
name = "georocket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actson = {path = "/Users/lion/code/fraunhofer/actson-rs", features = ["tokio"]}
anyhow = "1.0.71"
async-channel = "1.8.0"
clap = "4.3.21"
thiserror = "1.0.40"
tokio = {version = "1.28.2", features = ["sync", "rt", "macros", "io-util", "fs"]}

[dev-dependencies]
serde_json = "1.0.104"
