[package]
name = "georocket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
post_gis_store = []

[dependencies]
actson = {version = "0.5.0", features = ["tokio"]}
anyhow = "1.0.71"
async-channel = "2"
clap = {version = "4.5", features = ["derive"]}
thiserror = "1.0.40"
tokio = {version = "1.28.2", features = ["sync", "rt", "macros", "io-util", "fs"]}
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "serde"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.104"
async-trait = "0.1.74"
tracing = "0.1.40"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"]}
refinery = { version = "0.8.12", features = ["tokio-postgres"] }
futures = "0.3.30"
toml = "0.8.10"

# Workspace Dependencies:
indexing = {path = "../indexing"}
georocket-types = {path = "../georocket-types"}

[dev-dependencies]
serde_json = "1.0.104"
geo-testcontainer = {path = "../geo-testcontainer", features = ["postgis"]}

