[package]
name = "core"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
assertor.workspace = true
chumsky.workspace = true
proj.workspace = true
quick-xml.workspace = true
rocksdb.workspace = true
rustc-hash.workspace = true
tantivy.workspace = true
tantivy-common.workspace = true
ulid.workspace = true

[dev-dependencies]
tempdir.workspace = true
