[package]
name = "georocket-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["sync", "rt-multi-thread", "macros", "io-util", "fs"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
async-channel = "2"
toml = "0.8.10"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
actson = { version = "1.0.0", features = ["tokio"] }
thiserror = "1.0.40"
tracing = "0.1.40"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }


# Workspace Dependencies
indexing = { path = "../indexing" }
georocket-types = { path = "../georocket-types" }
georocket-migrations = { path = "../georocket-migrations", features = ["postgis", "tokio-postgres"] }
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
pin-project = "1.1.5"
regex = "1.10.4"

[dev-dependencies]
serde_json = "1.0.104"
geo-testcontainer = { path = "../geo-testcontainer", features = ["postgis-experimental-arm64"] }
