[package]
name = "georocket-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
georocket-types = { path = "../georocket-types" }
tokio-postgres = "0.7.10"
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["rt"] }
futures-util = "0.3.30"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros", "fs"] }
uuid = { version = "1.7.0", features = ["v4"] }
geo-testcontainer = { path = "../geo-testcontainer", features = ["postgis-experimental-arm64"] }
georocket-migrations = { path = "../georocket-migrations", features = ["postgis", "tokio-postgres"] }
once_cell = { version = "1.19.0" }