[package]
name = "georocket"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0.4"
pin-project = "1.1.5"
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
tokio = { version = "1.36", features = ["full"] }
