[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chumsky = { version = "1.0.0-alpha.7" }
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["rt"] }
tokio-postgres = "0.7.10"
types.workspace = true
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
geo-testcontainer = { path = "../geo-testcontainer", features = [
  "postgis-experimental-arm64",
] }
migrations.workspace = true
once_cell = { version = "1.19.0" }
tokio = { version = "1.36.0", features = ["rt", "macros", "fs"] }
uuid = { version = "1.7.0", features = ["v4"] }
